--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 body{
     background-color: #F5EEDC;
     margin: 0;
-    font-family:Helvetica, sans-serif;
+    font-family:nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+    margin: 0;
+    padding: 0;
 }
